# follower-vc-demo

./: Cargo.toml  README.md  setup.sh
cli/: Cargo.toml
cli/src/: main.rs
example/: block.json  blocked.jwk  follow.json  followee.jwk  follower.jwk  post.json  unsigned_block.json  unsigned_follow.json  unsigned_post.json
schema/: follow.json  follower.json
src/: main.rs
