[package]
name = 'vc-follow'
version = '0.1.0'
edition = '2021'

[dependencies]
chrono = '0.4'
structopt = '0.3'
serde = '1'
serde_json = '1'

[dependencies.ssi]
path = '../../ssi'

[dependencies.url]
version = '2.2'
features = ['serde']

[dependencies.uuid]
version = '0.8'
features = [
    'serde',
    'v4',
    'stdweb',
]
